Add responsive style

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
         <div class="title">
             <div class="logo">
                 <div></div>
-                <h1>Daniel Grezzi Lima</h1>
+                <h1>Daniel Grezzi</h1>
             </div>
-            <span>&lt/&gt</span>
             <p>front-end</p>
         </div>
         <div class="menu">
             <a href="#">
                 <p class="un">About me</p>
-            <!-- </a>|
-            <a href="#">
+            </a>
+            <!-- <a href="#">
                 <p class="un">skill</p>
             </a>|
             <a href="#">
