--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="title">
             <div class="logo">
-                <div></div>
+                <div />
                 <h1>Daniel Grezzi</h1>
             </div>
             <p>front-end</p>
@@ -31,8 +31,8 @@
             </a>|
             <a href="#">
                 <p class="un">contacts</p>
-            </a>
-        </div> -->
+            </a> -->
+        </div>
     </header>
     <main class="container">
         <img src="./assets/avatar.jpg" alt="Avatar" srcset="" />
@@ -44,13 +44,13 @@
                 have always had a strong interest in programming. During college, I had the opportunity to develop
                 laboratory analysis equipment programmed with Arduino microcontroller. For 10 years, I worked as an
                 analytical chemist in laboratories for large pharmaceutical multinationals. Seeking new challenges, I
-                decided to delve into the world of programming and learn new languages.</p>
-
+                decided to delve into the world of programming and learn new languages.
+            </p>
             <p class="indent">Currently, I am focused on learning web and mobile systems development, which allows me to
                 expand my
                 knowledge and skills in programming and apply them to challenging projects. I am always seeking new
                 opportunities to grow and learn as a developer, while continuing to expand my career in the world of
-                technology."</p>
+                technology."
             </p>
             <!-- <div class="menu-circle">
                 <a href="#">
@@ -70,7 +70,6 @@
                     </div>
                 </a>
             </div> -->
-        </div>
         </div>
     </main>
     <footer>
@@ -96,9 +95,8 @@
                         alt="dgrezzi#3143" height="32" width="32" /></a>
             </p>
         </div>
-
     </footer>
+    <img id="bg" src="./assets/bg.jpg" />
 </body>
-<img id="bg" src="./assets/bg.jpg" />
 
 </html>
