--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="title">
             <div class="logo">
-                <div />
+                <div ></div>
                 <h1>Daniel Grezzi</h1>
             </div>
             <p>front-end</p>
