--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link
             rel="icon"
             type="image/x-icon"
-            href="/assets/favicon.svg"
+            href="./assets/favicon.svg"
             fill="rgb(0,0,0)"
         />
     </head>
