--- a/index.html
+++ b/index.html
@@ -98,32 +98,36 @@
             <div class="contact">
                 <h2>Connect with me:</h2>
                 <p class="icons">
-                    <a href="https://linkedin.com/in/grezzi" target="blank"
-                        ><img
+                    <a href="https://linkedin.com/in/grezzi" target="blank">
+                        <img
                             align="center"
                             src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg"
                             alt="grezzi"
                             height="32"
                             width="32"
-                    /></a>
-                    <a href="https://fb.com/daniel.grezzi" target="blank"
-                        ><img
+                        />
+                    </a>
+                    <a href="https://fb.com/daniel.grezzi" target="blank">
+                        <img
                             align="center"
                             src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/facebook.svg"
                             alt="dgrezzi"
                             height="32"
                             width="32"
-                    /></a>
+                        />
+                    </a>
                     <a
                         href="https://discord.com/channels/@me/952511788455456768"
                         target="blank"
-                        ><img
+                    >
+                        <img
                             align="center"
                             src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/discord.svg"
                             alt="dgrezzi#3143"
                             height="32"
                             width="32"
-                    /></a>
+                        />
+                    </a>
                 </p>
             </div>
         </footer>
